<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <!--  first block -->

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/backArrow" />

        <LinearLayout
            android:id="@+id/delivering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/backArrow"
            app:layout_constraintTop_toTopOf="@+id/backArrow"
            app:layout_constraintBottom_toBottomOf="@+id/backArrow"
            android:layout_marginStart="15dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deliver"
                android:textSize="18sp"
                android:textStyle="bold"
                android:letterSpacing="0.05"
                android:textColor="#000000"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="#FF6F01"
                />

        </LinearLayout>

        <!-- *************** -->

        <!--  search box -->
        <LinearLayout
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:id="@+id/searchBox"
            app:layout_constraintStart_toStartOf="@+id/backArrow"
            app:layout_constraintEnd_toEndOf="@+id/talabatMart"
            app:layout_constraintTop_toBottomOf="@+id/backArrow"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@drawable/search_box_border"
            >
            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/searchIcon"
                android:src="@drawable/ic_baseline_search_24"
                />
            <TextView
                android:id="@+id/searchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/search"
                android:padding="5dp"
                android:textSize="17sp"
                android:textColor="@color/gray"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <!-- *************** -->

        <!--  talabat mart voucher -->
        <ImageView
            android:id="@+id/talabatMart"
            android:layout_width="373dp"
            android:layout_height="wrap_content"
            android:src="@drawable/talabat_mart"
            android:contentDescription="@string/talabtMart"
            app:layout_constraintTop_toBottomOf="@+id/searchBox"
            app:layout_constraintStart_toStartOf="@+id/backArrow"
            app:layout_constraintCircleRadius="5dp"
            tools:ignore="MissingConstraints" />

        <!-- *************** -->






    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>